# MemoMate

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  README.md  agent_demo.py  build_base.sh  docker-compose.milvus.yml  docker-compose.ollama.yml  docker-compose.vllm.yml  docker-compose.yml  docker_build.sh  embedding-demo.py  kafka.yaml  kafka.yml  langgraph.json  main.py  progress_demo.py  pyproject.toml  pytest.ini  requirements.txt  test_reranker.py  tools_demo.py
.cursor/rules/: README.mdc  api-development.mdc  code-style.mdc  database.mdc  deployment.mdc  document-parsing.mdc  enums-schemas.mdc  git-commit.mdc  log-tool.mdc  logging.mdc  package-management.mdc  project-structure.mdc  python-packages-manager.mdc  python-style.mdc  rag-development.mdc  testing.mdc  utils-tools.mdc
.github/: dependabot.yml
app/: Dockerfile  __init__.pyi  configs.py  consumer_start.py  database.py  docker-compose.yml  embedding.py  enums.py  initial_demo_data.py  main.py  queue_start.py  transfer.py
app/agents/: chart_rag_agent.py  rag_agent.py  rag_milvus_agent_pre.py  state.py  writer.py  xml_agent.py
app/agents/sub_agent/: __init__.py  echart_agent.py
app/api/: deps.py  main.py
app/api/demo/: sse.py  websocket.py
app/api/routes/: auth.py  emb.py  history.py  llm.py  login.py  parser.py  rag_llm.py  upload.py  user.py
app/config/: constants.py  log_config.py
app/core/: __init__.py  __init__.pyi  config.py  consts.py  db.py  demo.py  log_adapter.py  main.py  middlewares.py  multi_query.py  responses.py  sessions.py  vector_search.py  vector_writer.py
app/crud/: __init__.py  history_message.py  user.py
app/db/: mysql.py  redis.py
app/document_parsing/: excel_paser.py  json_paser.py  markdown_parser.py  pdf_parser.py  txt_paser.py  video_subtitle_extractor.py  word_parser.py
app/document_parsing/common/: __init__.py  content_types.py  models.py  title_patterns.py
app/document_parsing/pdf/: models.py  paser.py
app/document_parsing/pdf_core/: __init__.py  utils.py
app/document_parsing/pdf_core/watermark/: __init__.py  add.py  remove.py
app/document_parsing/scripts/: video_subtitle_extractor.py
app/enums/: __init__.py  embedding.py  queue.py  task.py  upload.py
app/loaders/: ExcelLoader.py  PdfLoader.py  TextLoader.py  WordLoader.py  __init__.py
app/middleware/: rate_limit.py
app/models/: __init__.py  custom_retriever.py  history_message.py  login_model.py  task.py  upload.py  user.py
app/plugins/: __init__.py
app/plugins/rerank/: __init__.py  base.py  loader.py  manager.py  service.py
app/plugins/rerank/plugins/: __init__.py  default_plugins.py  xml_plugins.py
app/prompts/: __init__.py  multi_agent.py  rag_agent.py  xml_agent.py
app/rag/: README_PDF2MD.md  __init__.py  embedding.py  pdf_convert_cli.py  pdf_to_md.py  reasoning.py  transfer.py  web_search.py
app/rag/embedding/: __init__.py  document_processor.py  embed_db.py  embeeding_model.py  evaluation.py  examples.py  index_manager.py  retriever.py  test_embedding.py  test_multi_query.py  vector_search.py  vector_store.py
app/rag/embedding/embedding_db/: __init__.py  custom_milvus.py  custom_qdrant.py
app/rag/llm/: __init__.py  completions.py  document_chain.py  history.py  memo_tokenizers.py  tokenizers.py
app/rag/reranker/: __init__.py  base.py  cross_encoder.py  examples.py  llm_reranker.py  reranking_retriever.py  test_reranker.py
app/rag/retriever/: __init__.py  base_retriever.py  history_aware_retriever.py
app/rag_tools/: tool_library.py
app/routers/: auth.py
app/schemas/: __init__.py  auth.py  emb.py  history.py  llm.py  login.py  paser.py  upload.py  user.py
app/scripts/: ocr_model_test.py  qa_demo.py
app/services/: login.py
app/test/: log_test.py  redis_test.py
app/tests/: conftest.py  test_embedding.py  test_pymupdf.py  test_reasoning.py
app/tests/api/: test_upload.py
app/tests/api/routes/: test_items.py  test_login.py  test_upload.py  test_users.py  test_websocket.py
app/tests/core/: test_log.py
app/tests/crud/: test_user.py
app/tests/rag/: test_embedding.py  test_llm.py  test_tokenizer.py
app/tests/rag_tools/: test_tool_library.py
app/tests/scripts/: download_models.py  test_backend_pre_start.py  test_test_pre_start.py
app/tests/tool_searcher/: test_mcp_tool_library.py  test_tool_library.py
app/tests/utils/: item.py  test_task_queue.py  test_web_search.py  user.py
app/tool_searcher/: function_analyzer.py  mcp_tool.py  mcp_tool_library.py  tool.py  tool_library.py
app/tools/: web_search.py
app/utils/: __init__.py  aio_producer.py  art_name.py  common_llm_tools.py  contextlib_tools.py  custom_logging.py  db_utils.py  email_tools.py  emb.py  math_tools.py  model_info.py  password_validator.py  stream_handler.py  summary.py  system_file_tools.py  task_queue.py  time_tools.py  web_search_summary.py
docs/: QUICK_START.md  REFACTORING_SUMMARY.md  duck_search.ipynb  embedding_deployment_guide.md  milvus_deployment_guide.md  task_queue.md  web_page_search.ipynb  web_search_optimization.md
rules/: python-packages-manager.mdc
scripts/: dev.sh  lint.sh  setup_kafka_topics.py
typings/app/core/: db.pyi  log_adapter.pyi
typings/app/core/db/: __init__.pyi
typings/app/rag/embedding/: embeeding_model.pyi
typings/transformers/: __init__.pyi
