[project]
name = "embedding-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "lancedb>=0.20.0",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.6",
    "loguru>=0.7.3",
    "markitdown>=0.0.1",
    "mypy>=1.15.0",
    "openai>=1.65.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
]
